# libdc1394-cmake

./: .gitignore  CMakeLists.txt  README.md
1394camera646/: 1394Camera.dsw  1394Camera.nsi  1394Camera.sln  Doxyfile  cmudc1394.cdf
1394camera646/1394CameraDemo/: 1394CameraDemo.cpp  1394CameraDemo.dsp  1394CameraDemo.exe.manifest  1394CameraDemo.rc  1394CameraDemoDev.dsp  1394CameraDemoDev.vcproj  1394camerademo.h  GetIntegerDialog.cpp  GetIntegerDialog.h  MainFrm.cpp  MainFrm.h  TwiddleDialog.cpp  TwiddleDialog.h  resource.h
1394camera646/1394CameraDemo32/: 1394CameraDemo.cpp  1394CameraDemo.h  1394CameraDemo32.dsp  1394CameraDemo32.vcproj  BasicModalDialog.cpp  BasicModalDialog.h  GetIntegerDialog.cpp  GetIntegerDialog.h  TwiddleDialog.cpp  TwiddleDialog.h  WinMain.cpp  resource.h
1394camera646/1394camera/: 1394CamAcq.cpp  1394CamCap.cpp  1394CamFMR.cpp  1394CamMem.cpp  1394CamPIO.cpp  1394CamRGB.cpp  1394CamReg.cpp  1394CamSIO.cpp  1394Camera.cpp  1394CameraControl.cpp  1394CameraControlSize.cpp  1394CameraControlStrobe.cpp  1394CameraControlTrigger.cpp  1394camera.dsp  1394camera.rc  1394camera.vcproj  1394main.c  ControlDialog.cpp  ControlDialog.h  ControlPane.cpp  ControlSizeDialog.cpp  ControlWrappers.cpp  debug.c  debug.h  isochapi.c  mainpage.dox  pch.h  tables.c
1394camera646/1394cmdr/: 1394api.c  1394cmdr.c  1394cmdr.dsp  1394cmdr.h  1394cmdr.rc  1394cmdr.vcproj  asyncapi.c  debug.c  debug.h  ioctl.c  isochapi.c  pch.h  pnp.c  power.c  resource.h  sources  util.c
1394camera646/autoupdater/: autoupdater.cpp  autoupdater.vcproj
1394camera646/camrec/: camrec.cpp  camrec.dsp  camrec.vcproj
1394camera646/doc/src/: cmu.css  footer.html  header.html
1394camera646/isochtest/: isochtest.cpp  isochtest.vcproj
1394camera646/siotest/: siotest.cpp  siotest.vcproj
dc1394/: CMakeLists.txt
dc1394/juju/: CMakeLists.txt
dc1394/linux/: CMakeLists.txt
dc1394/macosx/: CMakeLists.txt
dc1394/usb/: CMakeLists.txt
dc1394/windows/: CMakeLists.txt
examples/: CMakeLists.txt
